<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/MA_Report_Issue" />
        <item
            android:id="@+id/nav_reported_issues"
            android:icon="@drawable/ic_feedback_black_24dp"
            android:title="@string/MA_Reports" />
        <item
            android:id="@+id/nav_teste"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="Teste" />

    </group>

    <item android:title="@string/MA_Account_Sep">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/MA_Profile" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/MA_Logout" />
        </menu>
    </item>

</menu>
